# oxidise

./: .gitignore  Cargo.toml  NOTES.md  README.md  RESOURCES.md
01/a_hello_world/: main
03/d_variables/: Cargo.toml
codecrafters/primer/: README.md
frontend-masters/: README.md
programming-rust/03-fundamental-types/: 01-TYPES.md  02-NUMERIC.md  03-BOOL.md  04-CHAR.md  05-TUPLES.md  06-POINTERS.md  07-SEQUENCES.md  08-STRINGS.md
programming-rust/04-ownership-and-moves/: 01-INTRO.md  02-OWNERSHIP.md  03-MOVES.md  04-COPY-TYPES.md  05-RC-ARC.md
programming-rust/05-references/: 01-REFERENCES.md  02-REFERENCES-VALUES.md
projects/api-warp/: Cargo.toml  README.md
projects/axum/: Cargo.toml  README.md
projects/axum/src/: main.rs
projects/bytes-size/: Cargo.toml
projects/calc/: Cargo.toml
projects/leptos/: README.md
projects/maud/: Cargo.toml
projects/reqwest-demo/: Cargo.toml  README.md
projects/scrape/: Cargo.toml
projects/scrape/output/: text.txt
projects/scrape/src/: 01-blocking-get.rs  02-async-get.rs  03-scrape-books.rs  main.rs
projects/serde/: Cargo.toml  README.md
projects/serde-demo/: Cargo.toml  README.md
rust-book/: NOTES.md  README.md
rust-book-cli/grrs/: Cargo.toml
rust-in-action/: README.md
rust-in-action/1-3-2-hello-intl/: Cargo.toml
rust-in-action/1-5-process-csv/: Cargo.toml
rust-in-action/1-6-1c-buffer-overflow/: Cargo.toml
rust-in-action/1-6-1d-modified-iterator/: Cargo.toml
rust-in-action/1-6-3-create-integers/: Cargo.toml
rust-in-action/2-11-0-third-party/: Cargo.toml
rust-typescript/: package-lock.json
(+84 files in other folders)
