[package]
edition = "2021"
name = "scrape"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.12.0", features = ["attributes", "tokio1"]}
reqwest = {version = "0.11.22", features = ["blocking"]}
scraper = "0.18.1"
